appId: com.expo.routere2e
name: Link preview tabs
---
- stopApp: com.expo.routere2e
- openLink: router-e2e://tabs
- runFlow: ../close-warning.yml
- assertVisible: "Index screen"
- runFlow: ../assert-all-tabs-visible.yml
- runFlow: ../assert-accessory-visible.yml

# Navigate to Faces tab
- longPressOn:
    id: "link-face-0"
- assertVisible: "Face 0"
- tapOn: "Face 0"
- assertVisible: "systemBlue"
- runFlow: ../assert-all-tabs-visible.yml
- runFlow: ../assert-accessory-visible.yml
- assertVisible:
    id: "BackButton"

- tapOn:
    id: "BackButton"
- assertVisible: "Face Gallery"
- runFlow: ../assert-all-tabs-visible.yml
- runFlow: ../assert-accessory-visible.yml


