appId: ${APP_ID}
---
# Launch the app
- runFlow: ../common/_nested-flows/launch-brownfield.yml

# Navigate to the dev menu screen
- tapOn:
    id: apis-tab
- tapOn:
    id: apis-dev-menu
- assertVisible:
    id: dev-menu-header

# Open the dev menu
- tapOn:
    id: dev-menu-open

# Assert that buttons are rendered correctly
- assertVisible: 'Reload'
- assertVisible: 'Toggle performance monitor'
- assertVisible:
    text: 'Toggle element inspector'
    enabled: true
- scrollUntilVisible:
    element:
      text: 'Open DevTools'

# Assert that information about the app
# is correctly loaded
- assertVisible: 'expo-app'
- assertVisible: 'Runtime version: ${RUNTIME_VERSION}'

- scrollUntilVisible:
    element:
      text: 'Copy system info'

- assertVisible: 'Version'
- assertVisible: '1.0.0'

- assertVisible: 'Runtime version'
- assertVisible: '${RUNTIME_VERSION}'

- runFlow:
    when:
      platform: iOS
    commands:
      - assertVisible: http://localhost:8081
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible: http://10.0.2.2:8081

# Assert that dev menu actions work
- scrollUntilVisible:
    element:
      text: 'Reload'
    direction: UP

# Android Performance Monitor is not detectable
# by Maestro
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Toggle Performance Monitor'
      - assertVisible: 'RAM .* MB'
      - assertVisible: 'JSC .* MB'
      - tapOn:
          id: dev-menu-open
      - tapOn: 'Toggle Performance Monitor'
      - assertNotVisible: 'RAM .* MB'
      - assertNotVisible: 'JSC .* MB'
      - tapOn:
          id: dev-menu-open

- tapOn: 'Reload'
- extendedWaitUntil:
    visible: 'Expo + Brownfield = 🖤'
    timeout: 60000
